# Easy-IRL-Stream

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1  firewall-setup.bat
.github/: FUNDING.yml
.github/workflows/: release.yml
data/locale/: de-DE.ini  en-US.ini
installer/: installer.iss
src/: debug-log.h  event-handler.c  event-handler.h  help-dialog.cpp  help-dialog.hpp  ingest-thread.c  ingest-thread.h  irl-source.c  irl-source.h  media-decoder.c  media-decoder.h  obfuscation.cpp  obfuscation.h  plugin-main.c  remote-settings.c  remote-settings.h  srtla-server.c  srtla-server.h  stats-dialog.cpp  stats-dialog.hpp  translations.h  watermark.c  watermark.h  webhook.c  webhook.h
